{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 28,
  "lineage": "846dff74-c8d6-7636-b4c7-4a7f0a627fa5",
  "resources": [
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3f00f9da8aa01db",
            "domain": "vpc",
            "id": "eipalloc-0e3f00f9da8aa01db",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-217-222-126.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.222.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:internet-gateway/igw-0bf9a1614e421f122",
            "id": "igw-0bf9a1614e421f122",
            "owner_id": "804872348047",
            "tags": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "dependencies": [
            "module.my_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3f00f9da8aa01db",
            "association_id": "eipassoc-0814b50c7328a9f67",
            "connectivity_type": "public",
            "id": "nat-0d25531aec0e05183",
            "network_interface_id": "eni-0a906d4db541d5f15",
            "private_ip": "10.0.1.122",
            "public_ip": "18.217.222.126",
            "subnet_id": "subnet-0a86827925aa57f08",
            "tags": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "module.my_default_vpc.aws_eip.nat",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-01ccc68932bdbbedc",
            "id": "rtb-01ccc68932bdbbedc",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d25531aec0e05183",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_default_vpc.aws_eip.nat",
            "module.my_default_vpc.aws_nat_gateway.nat",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-0416561719b7b13e4",
            "id": "rtb-0416561719b7b13e4",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf9a1614e421f122",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_default_vpc.aws_internet_gateway.main",
            "module.my_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043d7fb6a208b02ec",
            "route_table_id": "rtb-01ccc68932bdbbedc",
            "subnet_id": "subnet-09f0f3fe852f7e9c6"
          },
          "dependencies": [
            "module.my_default_vpc.aws_eip.nat",
            "module.my_default_vpc.aws_nat_gateway.nat",
            "module.my_default_vpc.aws_route_table.private_subnets",
            "module.my_default_vpc.aws_subnet.private_subnets",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06923dcbebb452720",
            "route_table_id": "rtb-01ccc68932bdbbedc",
            "subnet_id": "subnet-07a66d185d47d2b15"
          },
          "dependencies": [
            "module.my_default_vpc.aws_eip.nat",
            "module.my_default_vpc.aws_nat_gateway.nat",
            "module.my_default_vpc.aws_route_table.private_subnets",
            "module.my_default_vpc.aws_subnet.private_subnets",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031abe05ba5da1a0b",
            "route_table_id": "rtb-0416561719b7b13e4",
            "subnet_id": "subnet-0a86827925aa57f08"
          },
          "dependencies": [
            "module.my_default_vpc.aws_internet_gateway.main",
            "module.my_default_vpc.aws_route_table.public_subnets",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba278c1b92660244",
            "route_table_id": "rtb-0416561719b7b13e4",
            "subnet_id": "subnet-05200b0ee7669afd9"
          },
          "dependencies": [
            "module.my_default_vpc.aws_internet_gateway.main",
            "module.my_default_vpc.aws_route_table.public_subnets",
            "module.my_default_vpc.aws_subnet.public_subnets",
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-09f0f3fe852f7e9c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f0f3fe852f7e9c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "dependencies": [
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-07a66d185d47d2b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a66d185d47d2b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-private-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "dependencies": [
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0a86827925aa57f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a86827925aa57f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "dependencies": [
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-05200b0ee7669afd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05200b0ee7669afd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ec52cd2e52e02894"
          },
          "dependencies": [
            "module.my_default_vpc.aws_vpc.main",
            "module.my_default_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_default_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:vpc/vpc-0ec52cd2e52e02894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be4f2900e497e11a",
            "default_route_table_id": "rtb-019ec6de15da16f46",
            "default_security_group_id": "sg-09aa5573a6c5275e6",
            "dhcp_options_id": "dopt-fc5c9597",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec52cd2e52e02894",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019ec6de15da16f46",
            "owner_id": "804872348047",
            "tags": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4fbf2bda7d56bc2",
            "domain": "vpc",
            "id": "eipalloc-0f4fbf2bda7d56bc2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-20-40-215.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.40.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:internet-gateway/igw-0b427c050db02113f",
            "id": "igw-0b427c050db02113f",
            "owner_id": "804872348047",
            "tags": {
              "Name": "staging-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-igw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "dependencies": [
            "module.my_vpc_staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4fbf2bda7d56bc2",
            "association_id": "eipassoc-0fd0f632de63591f6",
            "connectivity_type": "public",
            "id": "nat-037d84e45e0571972",
            "network_interface_id": "eni-017531913b42030c8",
            "private_ip": "10.100.1.136",
            "public_ip": "3.20.40.215",
            "subnet_id": "subnet-0564daf8ccff18e9c",
            "tags": {
              "Name": "staging-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-nat-gw",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "module.my_vpc_staging.aws_eip.nat",
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-0c237017cf0c09a61",
            "id": "rtb-0c237017cf0c09a61",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037d84e45e0571972",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-route-private-subnet",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_staging.aws_eip.nat",
            "module.my_vpc_staging.aws_nat_gateway.nat",
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:route-table/rtb-04b4c6c2187a0bd32",
            "id": "rtb-04b4c6c2187a0bd32",
            "owner_id": "804872348047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b427c050db02113f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-route-public-subnets",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_staging.aws_internet_gateway.main",
            "module.my_vpc_staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0583d30bb3637af70",
            "route_table_id": "rtb-04b4c6c2187a0bd32",
            "subnet_id": "subnet-0564daf8ccff18e9c"
          },
          "dependencies": [
            "module.my_vpc_staging.aws_internet_gateway.main",
            "module.my_vpc_staging.aws_route_table.public_subnets",
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087a305abcb6f19d5",
            "route_table_id": "rtb-04b4c6c2187a0bd32",
            "subnet_id": "subnet-0c51aa55654356627"
          },
          "dependencies": [
            "module.my_vpc_staging.aws_internet_gateway.main",
            "module.my_vpc_staging.aws_route_table.public_subnets",
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0564daf8ccff18e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564daf8ccff18e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "dependencies": [
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0c51aa55654356627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c51aa55654356627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-public-2",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "dependencies": [
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_staging",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:vpc/vpc-0b771fa4eefa24628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-019feb0523dd18941",
            "default_route_table_id": "rtb-02bbe58f379ab2030",
            "default_security_group_id": "sg-0023267cec040fd9e",
            "dhcp_options_id": "dopt-fc5c9597",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b771fa4eefa24628",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bbe58f379ab2030",
            "owner_id": "804872348047",
            "tags": {
              "Name": "staging-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "staging-vpc",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "data",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:subnet/subnet-0564daf8ccff18e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.100.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564daf8ccff18e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804872348047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "staging-public-1",
              "Owner": "Ranjeet JADHAV",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b771fa4eefa24628"
          }
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b8534ff4b424939",
            "arn": "arn:aws:ec2:us-east-2:804872348047:instance/i-0c42cbd24cddf8936",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c42cbd24cddf8936",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sbi-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de747225e6d3c1c9",
            "private_dns": "ip-10-100-1-56.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.56",
            "public_ip": "3.133.114.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0258834abb9d8f8ff",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0564daf8ccff18e9c",
            "tags": {
              "Name": "Dev-WebServer-subnet-0564daf8ccff18e9c",
              "Owner": "RANJEET JADHAV"
            },
            "tags_all": {
              "Name": "Dev-WebServer-subnet-0564daf8ccff18e9c",
              "Owner": "RANJEET JADHAV"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0023267cec040fd9e"
            ]
          },
          "dependencies": [
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available",
            "module.web-server.data.aws_subnet.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:804872348047:security-group/sg-00c65e3061ab800af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c65e3061ab800af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Dev WebServer SG-20230703061734766900000002",
            "name_prefix": "Dev WebServer SG-",
            "owner_id": "804872348047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-web-server-sg",
              "Owner": "RANJEET JADHAV"
            },
            "tags_all": {
              "Name": "Dev-web-server-sg",
              "Owner": "RANJEET JADHAV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b771fa4eefa24628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_staging.aws_subnet.public_subnets",
            "module.my_vpc_staging.aws_vpc.main",
            "module.my_vpc_staging.data.aws_availability_zones.available",
            "module.web-server.data.aws_subnet.web"
          ]
        }
      ]
    }
  ]
}